# ContinuousBenchEval

./: .gitignore  README.md  evaluate.py  llm_evaluate.py  pyproject.toml  setup_env.sh  train.py
analysis_results/synth_geminon/: comparison.csv  lora_dpft_eps100_1bpt_temp1.0_180108.facts.csv  lora_dpft_eps100_1bpt_temp1.0_180108.summary.json  lora_dpft_eps10_1bpt_temp1.0_180108.facts.csv  lora_dpft_eps10_1bpt_temp1.0_180108.summary.json  lora_ft_epsinf_1bpt_temp1.0_181108.facts.csv  lora_ft_epsinf_1bpt_temp1.0_181108.summary.json
configs/base/: gemma3_1b_full.yaml  gemma3_1b_lora128.yaml  llama3_8b_lora64.yaml
configs/base/models/: gemma3_12b_full.yaml  gemma3_12b_lora128.yaml  gemma3_1b_full.yaml  gemma3_1b_lora128.yaml  gemma3_4b_full.yaml  gemma3_4b_lora128.yaml
configs/base/tasks/: geminon.yaml  news.yaml
configs/prompts/: geminon.txt  news.txt
configs/tracks/: geminon.yaml  geminon_gemma3_1b_full.yaml  geminon_gemma3_1b_lora128.yaml  geminon_gemma3_4b_full.yaml  geminon_gemma3_4b_lora128.yaml  news.yaml  news_gemma3_1b_full.yaml  news_gemma3_1b_lora128.yaml  news_gemma3_4b_full.yaml  news_gemma3_4b_lora128.yaml
data/: README.md  load_data.py
data/example/: sample.jsonl
data/helper/: clean_data.py  download.yaml  format_news.py  load_data.py
requirements/: jax-gpu.txt  jax-tpu.txt  torch-gpu.txt  wandb.txt
scripts/: analyze_synth_geminon.py  plot_runs.py  plot_vs_reference_1b.py
secrets/: gemini_keys.txt.example
src/cbe/: __init__.py  config.py
src/cbe/artifacts/: __init__.py  local_store.py
tests/: test_analyze_synth_geminon.py
(+21 files in other folders)
