[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cbe"
version = "0.1.0"
description = "ContinuousBenchEval — a framework-agnostic training and evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0",
    "dacite>=1.8",
]

[project.optional-dependencies]
torch = [
    "torch>=2.1",
    "transformers>=4.40",
    "trl>=0.8",
    "peft>=0.10",
    "datasets",
    "accelerate",
    "tensorboard",
]
jax-gpu = [
    "jax[cuda12]>=0.4.20",
    "kauldron>=1.3",
    "grain",
    "optax",
    "tensorflow-cpu",
]
jax-tpu = [
    "jax[tpu]>=0.4.20",
    "kauldron>=1.3",
    "grain",
    "optax",
    "tensorflow-cpu",
]
wandb = ["wandb"]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
